--- a/webpagehugo/public/404.html
+++ b/webpagehugo/public/404.html
@@ -29,7 +29,7 @@
     <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://yuseib.pages.dev/404.html" />
+<meta property="og:url" content="http://yuseib-proj.pages.dev/404.html" />
 
 <meta itemprop="name" content="404 Page not found">
 <meta itemprop="description" content=""><meta name="twitter:card" content="summary"/>
@@ -91,7 +91,7 @@
     </main>
     <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
-  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="http://yuseib.pages.dev/" >
+  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="http://yuseib-proj.pages.dev/" >
     &copy;  My New Hugo Site 2021 
   </a>
     <div>
